
VERSION 0.6.0-cvs
=================

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>

 * Finished 'maildir' implementation. This is EXPERIMENTAL!

2004-12-19  Vincent Richard  <vincent@vincent-richard.net>

 * Added chaining in exception handling. vmime::exception::other() returns
   the exception which is encapsulated in the current exception (if any).
   This allows to retrieve the exception "stack" (for example, this is
   used for 'maildir' implementation, where some functions return a
   'filesystem_exception' encapsulated in a 'messaging_exception').

 * Fixed bugs and memory leaks in POP3/IMAP/maildir implementations.

2004-12-17  Vincent Richard  <vincent@vincent-richard.net>

 * Made default platform handlers (currently, only "posix"). Source files
   are in src/platforms/[platform-name].

   To use a default platform handler, do the following:
      - #include <vmime/platforms/[platform-name]/handler.hpp>
      - call vmime::platformDependant::setHandler() with the appropriate class
      - link your program with both 'libvmime' and 'libvmime-[platform-name]'

   For example, to use the default platform handler for POSIX (GNU/Linux):

        #include <vmime/platforms/posix/handler.hpp>

        int main()
        {
            vmime::platformDependant::setHandler
                  <vmime::platforms::posix::posixHandler>();

            // ...
        }

        and link your program with "-lvmime" and "-lvmime-posix".

2004-10-21  Vincent Richard  <vincent@vincent-richard.net>

 * A _LOT_ of cleaning/refactoring in VMime code:

      - got rid of field types (only using field names now).

      - removed iterators on 'header', 'text', 'addressList', 'mailboxGroup',
        'propertySet' and 'bodyPart': use access functions instead (iterators
        made the code difficult to understand). You can always use standard
        iterators on the container returned by getFieldList(), and so on.
