@@ -51,7 +51,7 @@ public:
 	folder* getRootFolder();
 	folder* getFolder(const folder::path& path);
 
-	const bool isValidFolderName(const folder::path::component& name);
+	const bool isValidFolderName(const folder::path::component& name) const;
 
 	static const serviceInfos& getInfosInstance();
 	const serviceInfos& getInfos() const;
@@ -61,6 +61,8 @@ public:
 	void disconnect();
 
 	void noop();
+
+	const int getCapabilities() const;
 
 private:
 
